--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://kit.fontawesome.com/34d89722d9.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <script src="./js/script.js">
+    <script src="../portfolio/js/script.js">
     </script>
     <div id="header">
         <div class="container">
